Adiciona Link para Buzzfeed

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <li>Foco</li></ul>
     </p>
     <p id="foto"><img src="./IMG_6344 (1).png" alt="Por do Sol em Salvador" width="200px"></p>
+    <p> <a href="https://buzzfeed.com.br/" target="_blank">Confira as novidades do <strong>BUZZFEED</strong></a></p>
 </body>
 </html>
