adiciona lista de tópicos do Portifólio

--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
     <p></p><a href="#foto">Quem sou eu? Veja minha Foto!</a></p>
     <p>Formado em Administração pela UFBA <strong>Brasileiro</strong> e natural de <strong>Salvador/Ba</strong> 28 anos</p> 
     <p>Em transição de carreira, para me tornar um Desenvolvedor.</p>
-    <p>Considero meus pontos fortes:
-    <br> <ul>
+    <p><h4>Considero meus pontos fortes:</h4>
+    <ul>
     <li>Lealdade</li>
     <li> <strong>Empatia</strong></li>
-    <li>Inteligencia</li>
+    <li>Inteligência</li>
     <li>Foco</li></ul>
     </p>
+    <p><H4>CONFIRA:</H4>
+    <ol> 
+    <li><strong>Apps</strong></li>
+    <li>API's</li>
+    <li>Sites</li>
+    <li><strong>Landing Pages</strong></li>
+    <li>Códigos Abertos</li>
+    </ol></p>
     <p id="foto"><img src="./IMG_6344 (1).png" alt="Por do Sol em Salvador" width="200px"></p>
     <p> <a href="https://buzzfeed.com.br/" target="_blank">Confira as novidades do <strong>BUZZFEED</strong></a></p>
 </body>
