adiciona seções do portfólio com Links Internos - Último requisito

--- a/index.html
+++ b/index.html
@@ -15,17 +15,37 @@
     <li>Lealdade</li>
     <li> <strong>Empatia</strong></li>
     <li>Inteligência</li>
-    <li>Foco</li></ul>
+    <li>Foco</li>
+    </ul>
     </p>
     <p><H4>CONFIRA:</H4>
+        
     <ol> 
-    <li><strong>Apps</strong></li>
-    <li>API's</li>
-    <li>Sites</li>
-    <li><strong>Landing Pages</strong></li>
-    <li>Códigos Abertos</li>
+    <li> <a href="#apps"><strong>Apps</strong></a></li>
+    <li> <a href="#apis">API's</a></li>
+    <li> <a href="#sites">Sites</a></li>
+    <li> <a href="#landing pages"><strong>Landing Pages</strong></a></li>
+    <li> <a href="#codigos abertos">Códigos Abertos</a></li>
     </ol></p>
+
     <p id="foto"><img src="./IMG_6344 (1).png" alt="Por do Sol em Salvador" width="200px"></p>
+
     <p> <a href="https://buzzfeed.com.br/" target="_blank">Confira as novidades do <strong>BUZZFEED</strong></a></p>
+
+    <p id="apps">
+        <h4>APPS:</h4>
+    </p>
+    <p id="apis">
+        <h4>API's:</h4>
+    </p>
+    <p id="sites">
+        <h4>SITES:</h4>
+    </p>
+    <p id="landind pages">
+        <h4>LANDING PAGES:</h4>
+    </p>
+    <p id="codigos abertos">
+        <h4>CÓDIGOS ABERTOS:</h4>
+    </p>
 </body>
 </html>
