altera as fontes do nome e descrição

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Meu Portfólio</title>
+    <style>
+        h3{
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        .descricao{
+            font-family: cursive, sans-serif;
+        }
+    
+    
+    </style>
+
 </head>
 <body>
     <h1>MEU PORTIFOLIO</h1>
     <h3>Victor Carvalho Presídio</h3>
     <p></p><a href="#foto">Quem sou eu? Veja minha Foto!</a></p>
-    <p>Formado em Administração pela UFBA <strong>Brasileiro</strong> e natural de <strong>Salvador/Ba</strong> 28 anos</p> 
-    <p>Em transição de carreira, para me tornar um Desenvolvedor.</p>
+    <p class="descricao">Formado em Administração pela UFBA <strong>Brasileiro</strong> e natural de <strong>Salvador/Ba</strong> 28 anos</p> 
+    <p class="descricao">Em transição de carreira, para me tornar um Desenvolvedor.</p>
     <p><h4>Considero meus pontos fortes:</h4>
     <ul>
     <li>Lealdade</li>
