altera o estilo da escrita da nacionalidade e da naturalidade

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,9 @@
         body{
             background-color: rgb(126, 183, 90);
         }
-    
+        .origem{
+            font-style: italic;
+        }
     </style>
 
 </head>
@@ -22,7 +24,7 @@
     <h1>MEU PORTFÓLIO</h1>
     <h3>Victor Carvalho Presídio</h3>
     <p></p><a href="#foto">Quem sou eu? Veja minha Foto!</a></p>
-    <p class="descricao">Formado em Administração pela UFBA <strong>Brasileiro</strong> e natural de <strong>Salvador/Ba</strong> 28 anos</p> 
+    <p class="descricao">Formado em Administração pela UFBA <strong class="origem"> Brasileiro</strong> e natural de <strong class="origem">Salvador/Ba</strong> 28 anos</p> 
     <p class="descricao">Em transição de carreira, para me tornar um Desenvolvedor.</p>
     <p><h4>Considero meus pontos fortes:</h4>
     <ul>
