altera o tamanho de todas as fontes dos pontos fortes

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,22 @@
         .origem{
             font-style: italic;
         }
+        .lealdade{
+            font-size: 18px;
+        }
+        .empatia{
+            font-size: 24px;
+        }
+        .inteligencia{
+            font-size: 28px;
+        }
+        .foco{
+            font-size: 21px;
+        }
+        .bom-humor{
+            font-size: 30px;
+        }
+
     </style>
 
 </head>
@@ -28,10 +44,11 @@
     <p class="descricao">Em transição de carreira, para me tornar um Desenvolvedor.</p>
     <p><h4>Considero meus pontos fortes:</h4>
     <ul>
-    <li>Lealdade</li>
-    <li> <strong>Empatia</strong></li>
-    <li>Inteligência</li>
-    <li>Foco</li>
+    <li class="lealdade">Lealdade</li>
+    <li class="empatia"><strong>Empatia</strong></li>
+    <li class="inteligencia">Inteligência</li>
+    <li class="foco">Foco</li>
+    <li class="bom-humor"><strong>Bom humor</strong></li>
     </ul>
     </p>
     <p><H4>CONFIRA:</H4>
