coloca foto com borda redonda

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,10 @@
         .bom-humor{
             font-size: 30px;
         }
-
+        img{
+            border-radius: 180%;
+        }
+    
     </style>
 
 </head>
